--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,10 @@
               "buildTarget": "other-module:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4210
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
